# milcam

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  MilCAM.code-workspace  README.md
.ai/: ARCHITECTURE.md  CODESYS_BRIDGE.md  CODESYS_RETURN_BUTTON.md  DEVICE_DEPLOY_PROCEDURE.md  DEVICE_PROFILE.md  DISPLAY_ARCHITECTURE_2026-06-09.md  DROPBEAR_INSTALL_2026-06-09.md  ENGINEERING_LOG.md  (+13 more)
freecad/: CMakeLists.txt  FCGlobal.h  LibraryVersions.h
freecad/App/: ApplicationDirectoriesPy.cpp  ApplicationDirectoriesPy.h  CMakeLists.txt  CMakeScript.h  ComplexGeoDataPy.cpp  ComplexGeoDataPy.h  DocumentObjectExtensionPy.cpp  DocumentObjectExtensionPy.h  DocumentObjectGroupPy.cpp  DocumentObjectGroupPy.h  DocumentObjectPy.cpp  DocumentObjectPy.h  DocumentPy.cpp  DocumentPy.h  ExtensionContainerPy.cpp  ExtensionContainerPy.h  ExtensionPy.cpp  ExtensionPy.h  GeoFeatureGroupExtensionPy.cpp  GeoFeatureGroupExtensionPy.h  GeoFeaturePy.cpp  GeoFeaturePy.h  GroupExtensionPy.cpp  GroupExtensionPy.h  InitScript.h  LinkBaseExtensionPy.cpp  LinkBaseExtensionPy.h  MaterialPy.cpp  MaterialPy.h  MeasureManagerPy.cpp  MeasureManagerPy.h  MetadataPy.cpp  MetadataPy.h  OriginGroupExtensionPy.cpp  OriginGroupExtensionPy.h  PartPy.cpp  PartPy.h  PropertyContainerPy.cpp  PropertyContainerPy.h  StringHasherPy.cpp  (+6 more)
freecad/Base/: AxisPy.cpp  AxisPy.h  BaseClassPy.cpp  BaseClassPy.h  BoundBoxPy.cpp  BoundBoxPy.h  CMakeLists.txt  CoordinateSystemPy.cpp  CoordinateSystemPy.h  MatrixPy.cpp  MatrixPy.h  Parameter.inl  PersistencePy.cpp  PersistencePy.h  PlacementPy.cpp  PlacementPy.h  PrecisionPy.cpp  PrecisionPy.h  QuantityPy.cpp  QuantityPy.h  RotationPy.cpp  RotationPy.h  TypePy.cpp  TypePy.h  UnitPy.cpp  UnitPy.h  VectorPy.cpp  VectorPy.h
freecad/Mod/Material/App/: Array2DPy.cpp  Array2DPy.h  Array3DPy.cpp  Array3DPy.h  CMakeLists.txt  MaterialFilterOptionsPy.cpp  MaterialFilterOptionsPy.h  MaterialFilterPy.cpp  MaterialFilterPy.h  MaterialLibraryPy.cpp  MaterialLibraryPy.h  MaterialManager.cpp  MaterialManagerPy.cpp  MaterialManagerPy.h  MaterialPropertyPy.cpp  MaterialPropertyPy.h  MaterialPy.cpp  MaterialPy.h  ModelManagerPy.cpp  ModelManagerPy.h  ModelPropertyPy.cpp  ModelPropertyPy.h  ModelPy.cpp  ModelPy.h  UUIDsPy.cpp  UUIDsPy.h
freecad/Mod/Part/App/: ArcOfCirclePy.cpp  ArcOfCirclePy.h  ArcOfConicPy.cpp  ArcOfConicPy.h  ArcOfEllipsePy.cpp  ArcOfEllipsePy.h  ArcOfHyperbolaPy.cpp  ArcOfHyperbolaPy.h  ArcOfParabolaPy.cpp  ArcOfParabolaPy.h  ArcPy.cpp  ArcPy.h  AttachEnginePy.cpp  AttachEnginePy.h  AttachEnginePyImp.cpp  AttachExtensionPy.cpp  AttachExtensionPy.h  AttachExtensionPyImp.cpp  BRepOffsetAPI_MakeFillingPy.cpp  BRepOffsetAPI_MakeFillingPy.h  BRepOffsetAPI_MakePipeShellPy.cpp  BRepOffsetAPI_MakePipeShellPy.h  BSplineCurvePy.cpp  BSplineCurvePy.h  BSplineSurfacePy.cpp  BSplineSurfacePy.h  BezierCurvePy.cpp  BezierCurvePy.h  BezierSurfacePy.cpp  BezierSurfacePy.h  BodyBasePy.cpp  BodyBasePy.h  BoundedCurvePy.cpp  BoundedCurvePy.h  CMakeLists.txt  CirclePy.cpp  CirclePy.h  ConePy.cpp  ConePy.h  ConicPy.cpp  (+77 more)
freecad/Mod/Part/App/BRepFeat/: MakePrismPy.cpp  MakePrismPy.h
freecad/Mod/Part/App/ChFi2d/: ChFi2d_AnaFilletAlgoPy.cpp  ChFi2d_AnaFilletAlgoPy.h  ChFi2d_ChamferAPIPy.cpp  ChFi2d_ChamferAPIPy.h  ChFi2d_FilletAPIPy.cpp  ChFi2d_FilletAPIPy.h  ChFi2d_FilletAlgoPy.cpp  ChFi2d_FilletAlgoPy.h
freecad/Mod/Part/App/Geom2d/: ArcOfCircle2dPy.cpp  ArcOfCircle2dPy.h  ArcOfConic2dPy.cpp  ArcOfConic2dPy.h  ArcOfEllipse2dPy.cpp  ArcOfEllipse2dPy.h  ArcOfHyperbola2dPy.cpp  ArcOfHyperbola2dPy.h  ArcOfParabola2dPy.cpp  ArcOfParabola2dPy.h  BSplineCurve2dPy.cpp  BSplineCurve2dPy.h  BezierCurve2dPy.cpp  BezierCurve2dPy.h  Circle2dPy.cpp  Circle2dPy.h  Conic2dPy.cpp  Conic2dPy.h  Curve2dPy.cpp  Curve2dPy.h  Ellipse2dPy.cpp  Ellipse2dPy.h  Geometry2dPy.cpp  Geometry2dPy.h  Hyperbola2dPy.cpp  Hyperbola2dPy.h  Line2dPy.cpp  Line2dPy.h  Line2dSegmentPy.cpp  Line2dSegmentPy.h  OffsetCurve2dPy.cpp  OffsetCurve2dPy.h  Parabola2dPy.cpp  Parabola2dPy.h
freecad/Mod/Part/App/GeomPlate/: BuildPlateSurfacePy.cpp  BuildPlateSurfacePy.h  CurveConstraintPy.cpp  CurveConstraintPy.h  PointConstraintPy.cpp  PointConstraintPy.h
freecad/Mod/Part/App/HLRBRep/: HLRBRep_AlgoPy.cpp  HLRBRep_AlgoPy.h  HLRBRep_PolyAlgoPy.cpp  HLRBRep_PolyAlgoPy.h  HLRToShapePy.cpp  HLRToShapePy.h  PolyHLRToShapePy.cpp  PolyHLRToShapePy.h
freecad/Mod/Part/App/ShapeFix/: ShapeFix_EdgeConnectPy.cpp  ShapeFix_EdgeConnectPy.h  ShapeFix_EdgePy.cpp  ShapeFix_EdgePy.h  ShapeFix_FaceConnectPy.cpp  ShapeFix_FaceConnectPy.h  ShapeFix_FacePy.cpp  ShapeFix_FacePy.h  ShapeFix_FixSmallFacePy.cpp  ShapeFix_FixSmallFacePy.h  ShapeFix_FixSmallSolidPy.cpp  ShapeFix_FixSmallSolidPy.h  ShapeFix_FreeBoundsPy.cpp  ShapeFix_FreeBoundsPy.h  ShapeFix_RootPy.cpp  ShapeFix_RootPy.h  ShapeFix_ShapePy.cpp  ShapeFix_ShapePy.h  ShapeFix_ShapeTolerancePy.cpp  ShapeFix_ShapeTolerancePy.h  ShapeFix_ShellPy.cpp  ShapeFix_ShellPy.h  ShapeFix_SolidPy.cpp  ShapeFix_SolidPy.h  ShapeFix_SplitCommonVertexPy.cpp  ShapeFix_SplitCommonVertexPy.h  ShapeFix_SplitToolPy.cpp  ShapeFix_SplitToolPy.h  ShapeFix_WirePy.cpp  ShapeFix_WirePy.h  ShapeFix_WireVertexPy.cpp  ShapeFix_WireVertexPy.h  ShapeFix_WireframePy.cpp  ShapeFix_WireframePy.h
freecad/Mod/Part/App/ShapeUpgrade/: UnifySameDomainPy.cpp  UnifySameDomainPy.h
freecad/cmake/: FreeCadMacros.cmake
milcam/CodesysBridge/: CMakeLists.txt
milcam/CodesysBridge/inc/: CodesysBridge.h
milcam/CodesysBridge/src/: CodesysBridge.cpp  CodesysBridgePy.cpp
milcam/app/: CMakeLists.txt
milcam/app/resources/: milcam.qrc  style.qss
milcam/app/src/: main.cpp
milcam/app/src/gui/: CanvasView.cpp  CanvasView.h  CncBackdrop.h  HmiSwitch.cpp  HmiSwitch.h  JobPanel.cpp  JobPanel.h  MainWindow.cpp  MainWindow.h  OperationToolBar.cpp  OperationToolBar.h  StatusBar.cpp  StatusBar.h  TopBar.cpp  TopBar.h
tests/: CMakeLists.txt  test_codesys_bridge.cpp
tests/core/: check.h  test_codesys_post.cpp  test_main.cpp  test_vtswitch.cpp
tests/core/golden/: profile_square.cnc
tests/python/: test_codesys_bridge.py  test_codesys_post.py
(+125 files in other folders)
