# CMakeLists.txt  (top-level)
cmake_minimum_required(VERSION 3.16)
project(MilCAM VERSION 0.3.0 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
enable_testing()
add_subdirectory(milcam/core)
add_subdirectory(tests)
# app/ added in Phase 0 (needs Qt)
